# JD-analyzer-agents

./: README.md  local.env  pyproject.toml  requirements.txt
backend/: app.py  server.py
backend/config/: lifespan.py  main.py
backend/utils/: timedelta.py
